# icpc-lib

./: .gitignore  CMakeLists.txt  README.md  contents.tex  contents.txt  generate_pdf.py  notebook.tex  tester.py
code/: tester.py
code/data-structure/: mo.h  sparsetable-rmq.h
code/data-structure/segtree/: segtree.h
code/data-structure/union_find/: union_find.h
code/geometry/: convex_hull.h  point.h
code/graph/: bfs.h  dfs.h  floyd-warshall.h  toposort.h
code/math/: cpa_fft.h  fft.h  int_fft.h  solve_linear.h
code/matrix/: matmul.h
code/number-theory/: gcd-lcm.h  mint.h  modular-inv.h  sieve-factors.h
code/number-theory/find_divisors/: find_divisors.h
code/strings/: manacher.h  suffix_array.h  zfunction.h
code/test/number-theory/: find_divisors_test.cpp
data-structure/: mo.h
data-structure/segtree/: segtree.h
dp/: kd.h
graph/: dfs-iterative.h  dijkstra.h  mst.h
math/: cpa_fft.h
number-theory/: modular-inv.h
test/: CMakeLists.txt
test/data-structure/: segtree_test.cpp
